--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>24 Reasons Why I Love You</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
-    rel="stylesheet"
-  >
-  <link rel="stylesheet" href="css/style.css">
+  <!-- Romantic handwritten font -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
@@ -27,15 +25,18 @@
       </div>
     </div>
     <!-- Repeat cards for months 2–24 -->
-    <!-- Month 2 -->
-    <div class="card"><div class="front"><span class="num">2.</span> Placeholder Title</div><div class="back">Reason goes here.</div></div>
     <!-- ... -->
-    <!-- Month 24 -->
-    <div class="card"><div class="front"><span class="num">24.</span> Placeholder Title</div><div class="back">Reason goes here.</div></div>
+    <div class="card">
+      <div class="front"><span class="num">24.</span> Placeholder Title</div>
+      <div class="back">Reason goes here.</div>
+    </div>
   </main>
 
   <footer>
-    <button id="shuffleBtn">Shuffle Reasons</button>
+    <!-- Heart-shaped shuffle button -->
+    <button id="shuffleBtn">
+      Shuffle <span class="heart">💖</span>
+    </button>
   </footer>
 
   <script src="js/script.js"></script>
