--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>24 Reasons Why I Love You</title>
-  <!-- Clean, readable font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,9 +18,7 @@
   </header>
 
   <main>
-    <ul class="reasons-list" id="reasonsList">
-      <!-- JS will populate existing 24 items + new ones -->
-    </ul>
+    <ul class="reasons-list" id="reasonsList"></ul>
   </main>
 
   <!-- Add Reason Modal -->
