--- a/index.html
+++ b/index.html
@@ -7,14 +7,26 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <!-- Background music -->
+  <audio id="bgMusic" src="assets/music/your-music.mp3" loop autoplay></audio>
+  <!-- Mute toggle -->
+  <button id="muteBtn" class="mute-btn">🔈</button>
+
+  <!-- Parallax header -->
+  <header id="header" class="parallax">
+    <div class="layer" data-speed="0.2"></div>
+    <div class="layer" data-speed="0.5"></div>
+    <div class="layer" data-speed="0.8"></div>
     <h1>24 Reasons Why I Love You</h1>
     <p>A reason for every month we've been together 💖</p>
   </header>
 
   <main class="reasons-grid" id="reasonsGrid">
-    <!-- Cards will be injected here by JS -->
+    <!-- Cards injected by JavaScript -->
   </main>
+
+  <!-- Heart cursor container -->
+  <div id="heartContainer"></div>
 
   <script src="js/script.js"></script>
 </body>
