--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>24 Reasons Why I Love You</title>
+  <title>24 Short Stories of Love</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header>
-    <h1>24 Reasons Why I Love You</h1>
-    <p>A reason for every month we've been together 💖</p>
+    <h1>24 Stories of Love</h1>
   </header>
 
   <main class="reasons-grid" id="reasonsGrid">
@@ -18,4 +19,5 @@
 
   <script src="js/script.js"></script>
 </body>
+
 </html>
