--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>24 Short Stories of Love</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>24 Stories of Love</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
   <header>
     <h1>24 Stories of Love</h1>
   </header>
 
   <main class="reasons-grid" id="reasonsGrid">
-    <!-- Cards will be injected here by JS -->
+    <!-- Cards will be injected by script.js -->
   </main>
 
   <script src="js/script.js"></script>
 </body>
-
 </html>
