--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <h1>24 Stories of Love</h1>
+    <div id="countdown" class="countdown"></div>
   </header>
 
   <main class="reasons-grid" id="reasonsGrid">
